# gusto

./: .drone.yml  .gitignore  .travis.yml  Jenkinsfile  LICENSE  Makefile  README.md  inifns.py  jovian_vortices_updating_points.py  jovian_vortices_with_ot.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  state.py  test_checkpointing.py
Scorer_param_testing/: field_output1x2.py  schaer_mountain.py
dcore/: __init__.py  advection.py  advection_schemes.py  configuration.py  diagnostics.py  diffusion.py  forcing.py  linear_solvers.py  state.py  timeloop.py
docs/: Makefile  _config.yml  about_gusto.md  index.markdown  index.rst  readme.md
examples/: May_eigenmodes_bickley_jet.py  Rayleigh_Taylor.py  ShearedTurbulence.py  VP_moist_sw.py  acoustic_sdc.py  adv_nairlauritzen.py  advection.py  averaged_sw.py  bickley_jet.py  boussinesq_2d_lab.py  calculate_eigenmode.py  compressible_eady.py  dcmip_3-1_linear_advection_new.py  dcmip_3-1_linear_advection_quads_rt0.py  dcmip_3-1_linear_advection_quads_rt1.py  dcmip_3-1_linear_advection_triangle_bdfm1.py  dcmip_3-1_no_meanflow_quads_rt1.py  dcmip_3-1_triangle_bdfm1.py  dcmip_3_1_meanflow_quads.py  deformational_advection.py  dense_bubble.py  diffusion_2d.py  dry_BryanFritsch.py  dry_bf_bubble.py  dry_bickley_jet.py  dry_sw_gaussian.py  ec_3d_bubble.py  ec_PUSM_unsteady.py  ec_dense_bubble.py  ec_dense_bubble_vorticity.py  ec_diverging_vortex.py  ec_sk_nonlinear.py  eigenmode_bickley_jet.py  embedded_DG.py  falling_BryanFritsch.py  forced_advection.py  gw_incompressible.py  gw_incompressible_3d.py  h_mountain.py  (+67 more)
(+832 files in other folders)
