[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gusto"
version = "1.0"
dependencies = [
  "netCDF4",
  "pandas",
  "qmat",
]
authors = [
  {name = "The Gusto Team"},
]
description = "Toolkit for compatible finite element dynamical cores"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "http://www.firedrakeproject.org/gusto/"
Repository = "https://github.com/firedrakeproject/gusto.git"

[tool.setuptools]
packages = [
  "gusto",
  "gusto.core",
  "gusto.diagnostics",
  "gusto.equations",
  "gusto.initialisation",
  "gusto.physics",
  "gusto.recovery",
  "gusto.solvers",
  "gusto.spatial_methods",
  "gusto.time_discretisation",
  "gusto.timestepping",
]
