[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gusto"
version = "1.0"
dependencies = [
  "firedrake @ git+https://github.com/firedrakeproject/firedrake.git",
  "netCDF4",
  "pandas",
  "qmat",
  "vtk",
]
authors = [
  {name = "The Gusto Team"},
]
description = "Toolkit for compatible finite element dynamical cores"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "http://www.firedrakeproject.org/gusto/"
Repository = "https://github.com/firedrakeproject/gusto.git"

[tool.setuptools.packages.find]
include = ["gusto*"]
